--- a/style.css
+++ b/style.css
@@ -1,324 +1,538 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Roboto Condensed', sans-serif;
-}
-  
-/* navbar */
-  
-.navbar-nav{
-    margin-right: 0 !important;
-    padding-right: 100px;
-}
-  
-.navbar{
-    background-color: #030c1f;
-    color: white !important;
-}
-  
-.nav-item a{
-    color: white !important;
-}
-  
-.nav-item{
-    padding-left: 2px;
-}
-  
-.navbar-brand{
-    color: white !important;
-    padding-left: 100px;
-}
-  
-#navbar button{
-    color: white !important;
+    border: none;
+    outline: none;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
 }
 
-/* banner */
-  
-#banner-container{
-    background-color: #0a193d;
-    color: white!important;
-    padding-top: 40px;
-    padding-bottom: 40px;
-      
+:root{
+    --bg-color:#1f242d;
+    --second-bg-color:#323946;
+    --text-color:#fff;
+    --main-color:#0ef;
 }
+
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+
+body{
+    background: var(--bg-color);
+    color: var(--text-color);
+}
+
+section{
+    min-height: 100vh;
+    padding: 10rem 9% 2rem;
+}
+
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem 9%;
+    background: var(--bg-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.header.sticky {
+    border-bottom: .1rem solid rgba(0,0,0,.2);
+}
+.logo {
+    font-size: 2.5rem;
+    color: var(--text-color);
+    font-weight: 600;
+    cursor: default;
+}
+
+.navbar a{
+   font-size: 1.7rem;
+   color: var(--text-color);
+   margin-left: 4rem;
+   transition: .3s;
+   -webkit-transition: .3s;
+   -moz-transition: .3s;
+   -ms-transition: .3s;
+   -o-transition: .3s;
+}
+
+.navbar a:hover,
+.navbar a.active{
+    color: var(--main-color);
+}
+
+#menu-icon{
+    font-size: 3.6rem;
+    color: var(--text-color);
+    display: none;
+}
+
+/*home section ------*/
+
+.home{
+   /* position: relative; */
+    display: flex;
+    /*justify-content: space-between;*/
+    justify-content: center;
+    align-items: center top;
+    /*width: 100%;
+    height: 100vh;
+    padding: 70px 10% 0;
+    */
+
+}
+
+.home-img img{
+    /*max-width: 450px;*/
+    width: 25vw;
+    animation: floatImage 4s ease-in-out infinite;
+    margin: 35px 35px;
+    display: inline-block;
  
-#banner-row.img{
-    max-width: 60%;
-    height: 60%;
-    display: block;
-    padding-left: 5px;
+}
+
+@keyframes floatImage { 
+    0% {
+        transform: translateY(0);  
+}
+50% {
+    transform: translateY(-2.4rem );
+}
+100% {
+    transform: translateY(0);
+}
+}
+
+.home-content h3{
+    font-size: 3.2rem;
+    font-weight: 700;
+}
+.home-content h3:nth-of-type(2){
+    margin-bottom: 3rem;
+}
+
+span {
+color: var(--main-color);
+}
+
+.home-content h1{
+    font-size: 5.6rem;
+    font-weight: 700;
+    line-height: 1.3;
+}
+.home-content p{
+    font-size: 1.6rem;
+}
+
+.social-media a{
+      display: inline-flex;
+      justify-content: center;
+      align-items: center;
+      width: 4rem;
+      height: 4rem;
+      background: transparent;
+      border: .2rem solid var(--main-color);
+      border-radius:50% ;
+      font-size: 2rem;
+      color: var(--main-color);
+      margin: 3rem 1.5rem 3rem 0;
+      transition: .5s ease;
+      -webkit-transition: .5s ease;
+      -moz-transition: .5s ease;
+      -ms-transition: .5s ease;
+      -o-transition: .5s ease;
+}
+
+.social-media a:hover{
+    background: var(--main-color);
+    color: var(--second-bg-color);
+    box-shadow: 0 0 1rem var(--main-color);
+}
+
+.btn{
+    display: inline-block;
+    padding: 12px 28px;
+    background: var(--main-color);
+    border-radius: 40px;
+    box-shadow: 0 0 1rem var(--main-color);
+    font-size: 16px;
+    color: var(--second-bg-color);
+    letter-spacing: .1rem;
+    text-decoration: none;
+    font-weight: 600;
+    transition: .5s ease;
+    -webkit-transition: .5s ease;
+    -moz-transition: .5s ease;
+    -ms-transition: .5s ease;
+    -o-transition: .5s ease;
+}
+.btn:hover{
+    box-shadow: none;
+}
+
+/*about----------*/
+.About{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: var(--second-bg-color);
+
+}
+
+.About-img{
+width: 35vw;
+}
+
+.heading{
+text-align: center;
+font-size: 4.5rem;
+}
+
+.about-content h2{
+text-align: left;
+line-height: 1.2;
+}
+
+.about-content h3{
+    font-size: 2.6rem;
+}
+
+.about-content p{
+font-size: 1.6rem;
+margin: 2rem 0 3rem ;
+}
+/*service section ----------*/
+.service h2{
+margin-bottom: 5rem;
+}
+
+.services-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
+  
+}
+
+.services-container .service-box {
+    flex: 1 1 30rem;
+    background: var(--second-bg-color);
+    padding: 3rem 2rem 4rem;
+    border-radius: 2rem ;
+    text-align: center;
+    border: .2rem solid var(--bg-color);
+    transition: .5s ease;
+}
+
+.services-container :hover{
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+
+.service-box :hover{
+    border-color: var(--main-color);
+    transform: scale(1.02);
+}
+
+.service-box i {
+    font-size: 7rem;
+    color: var(--main-color);
+}
+.service-box h3{
+font-size: 2.6rem;
+}
+
+.service-box p{
+    font-size: 1.6rem;
+    margin: 1rem 0 3rem ;
+}
+
+/*potrfolio--------------*/
+.portfolio {
+    background-color: var(--second-bg-color);
+ }
+
+ .portfolio h2{
+    /*tpopic ekai picture gap eka*/
+margin-bottom: 0.8rem;
+ }
+
+.portfolio-container {
+display: grid;
+grid-template-columns: repeat(3,1fr);
+align-items: center;
+gap: 2.5rem;
+ }
+
+ .portfolio-container .portfolio-box {
+    position: relative;
+    border-radius: 2rem;
+    box-shadow: 0 0 1rem var(--bg-color);
+    overflow: hidden;
+    display: flex;
+}
+
+.portfolio-box img {
+    width: 100%;
+    transition: .5s ease;
     
 }
-
-  
-#banner-row h3, p{
-    padding-left: 20px;
-    padding-top: 20px;
-    text-align: center;
-}
-  
-#banner-row a{
-    background-color: white !important;
-    color: black !important;
-    border: none;
-    margin-left: 10px;
-    margin-top: 10px;
-      
-}
-#banner-col{
-    padding-left: 10px;
+.portfolio-box:hover img{
+  transform: scale(1.1);
+ 
 }
 
-/* service */
-#service{
-    padding-top: 80px;
-    padding-bottom: 80px;
-}
-
-#services{
-max-width: 80%;
-height: 80%;
-display: block;
-padding-left: 5px;
-}
-#service h1{
-    padding-bottom: 70px;
-}
-  
-/* about */
-  
-/*start card 1111111111 ........... */
-#servicers{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:'Roboto Condensed', sans-serif;
-
-}
-/*eliye sudu pasubima*/
-#servicers-body{
-    min-height: 0vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color:white;
-   }
-   /*alu pasubima*/
-.slide-container{
-    max-width: 1800px;
-    width: 100%;
-    background-color: gray;
-    padding: 40px 0;
-}
-/*slide eke dakune idan
- wamaa gap eka*/
-.slide-content{
-    margin: 0 10px;
-    overflow: hidden;
-    border-radius: 25px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
-}
-/*card eke palala hadima*/
-.card{
-    border-radius: 25px;
-    -webkit-border-radius: 25px;
-    -moz-border-radius: 25px;
-    -ms-border-radius: 25px;
-    -o-border-radius: 25px;
-    background-color: white;
-}
-
-
-.image-content,.card-content{
-    display: flex;
-    flex-direction: column;
-    padding: 10px 14px;
-    align-items: center;
-}
-.image-content{
-    row-gap: 5px;
-    position: relative;
-    padding: 25px 0;
-   
-}
-
-.name{
-    font-size: 18px;
-    font-weight: 500;
-    color: #030c1f;
-}
-
-.description{
-    font-size: 14px;
-    color: #707070;
-    text-align: center;
-}
-.button{
-    border: none;
-    font-size: 16px;
-    color: white;
-    padding: 8px 16px;
-    background-color: #4070f4;
-    border-radius: 6px;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    -ms-border-radius: 6px;
-    -o-border-radius: 6px;
-    margin: 14px;
-    cursor: pointer;
-    transition: all0.3s ease;
-    -webkit-transition: all0.3s ease;
-    -moz-transition: all0.3s ease;
-    -ms-transition: all0.3s ease;
-    -o-transition: all0.3s ease;
-}
-.button:hover{
-    background-color: #0a193d;
-
-}
-.overlay{
+.portfolio-box .portfolio-layer{
+    position: absolute;
+    bottom: 0;
     left: 0;
-    top: 0;
-    height: 100%;
     width: 100%;
-    position: absolute;
     height: 100%;
-    width: 100%;
-    background-color:#4070f4;
-    border-radius: 25px 25px 0 25px;
-    -webkit-border-radius: 25px 25px 0 25px;
-    -moz-border-radius: 25px 25px 0 25px;
-    -ms-border-radius: 25px 25px 0 25px;
-    -o-border-radius: 25px 25px 0 25px;
-}
-/*rathu kotuwata udin 
-nil pata chooti waka*/
-
-.overlay::before,
-.overlay::after{
-    position: absolute;
-    content: '';
-    height: 40px;
-    width: 40px;
-    background-color:#4070f4;
-    right: 0;
-    bottom: -40px;
-}
-.overlay::after{
-    border-radius: 0 25px 0 0;
-    -webkit-border-radius: 0 25px 0 0;
-    -moz-border-radius: 0 25px 0 0;
-    -ms-border-radius: 0 25px 0 0;
-    -o-border-radius: 0 25px 0 0;
-    background-color:#4070f4;
+    background: linear-gradient(rgba(0,0,0,.1),var(--main-color));
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 0 4rem;
+    transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+    -moz-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    -o-transform: translateY(100%);
+    transition: .5s ease;
+  
 }
 
-.card-image{
-    position: relative;
-    height: 150px;
-    width: 150px;
+.portfolio-box:hover .portfolio-layer{
+    transform: translateY(0);
+}
+
+.portfolio-layer h4{
+    font-size: 3rem;
+}
+
+.portfolio-layer p {
+    font-size: 1.6rem;
+    margin: .3rem 0 1rem;
+}
+
+.portfolio-layer a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 5rem;
+    height: 5rem;
+    background: var(--text-color);
     border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-    background: white;
-    padding: 3px;
-} 
-.card-image .card-img{
-     height: 100%;
-     width: 100%;
-     object-fit: cover;
-     border-radius: 50%;
-     -webkit-border-radius: 50%;
-     -moz-border-radius: 50%;
-     -ms-border-radius: 50%;
-     -o-border-radius: 50%;
-     border: 4px solid #4070f4;
 }
-.swiper-navBtn{
-    color: #707070;
-    transform: color 0.3s ease;
-    -webkit-transform: color 0.3s ease;
-    -moz-transform: color 0.3s ease;
-    -ms-transform: color 0.3s ease;
-    -o-transform: color 0.3s ease;
 
+.portfolio-layer a i {
+    font-size: 2rem;
+    color: var(--second-bg-color);
+}
+
+/* contact section */
+.contact h2 {
+    margin-bottom: 3rem;
 }
 
 
+.contact form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+    margin-bottom: 3.5rem;
+}
 
-/*iwarai ekat............................*/
+.contact form .input-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
+.contact form .input-box input,
+.contact form textarea { width: 100%;
+     padding: 1.5rem;
+      font-size: 1.6rem; 
+      color: var(--text-color);
+       background: var(--second-bg-color);
+      border-radius:.8rem;
+      margin: .7rem 0;
+}
 
+.contact form .input-box input {
+    width: 49%;
+}
 
-/*#about{
-    padding-top: 80px;
-    padding-bottom: 80px;
+.contact form textarea {
+    resize: none;
 }
-  
-#about h1{
-    padding-bottom: 70px;
-}
-  
-#about-col ul{
-    padding-top: 50px;
-    padding-left: 50px;
-}
-  
-#about-col ul li{
-    padding-top: 15px;
-      
-}*/
 
-/*product na*/
-  
-/* social */
-  
-#social{
-    padding-top: 80px;
-    padding-bottom: 80px;
+.contact form .btn {
+    margin-top: 2rem;
+    cursor: pointer;
 }
-  
-#social h1{
-    padding-bottom: 70px;
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 2rem 9%;
+    background: var(--second-bg-color);
 }
-  
-.social-col a:hover img{
-   transform: translateY(-10px);
+
+.footer-text p{
+    font-size: 1.6rem;
 }
-  
-#social-row{
-    flex-direction: row;
+
+.footer-iconTop a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: .8rem;
+    background: var(--main-color);
+    border-radius: .8rem;
+    transition: .5s ease;
+ 
 }
-  
-/* footer */
-  
-.mb-3{
-  padding-top: 10px;
+
+.footer-iconTop a:hover {
+    box-shadow: 0 0 1rem var(--main-color);
 }
-  
-  
-/* media */
-@media only screen and (max-width: 987px){
-    .navbar-brand{
-        padding-left: 0px;
+.footer-iconTop a i{
+    font-size: 2.4rem;
+    color: var(--second-bg-color);
+}
+
+@media (max-width: 1200px){
+    html {
+        font-size: 55%;
     }
 }
-  
-@media only screen and (max-width: 768px){
-    #banner-row img{
-        padding-top: 20px;
+
+@media (max-width: 991px){
+    .header {
+        padding: 2rem 3%;
     }
-  
-   .social-col{
-       width: 33%;
-   }
-  
+    section {
+        padding: 10rem 3% 2rem;
+    }
+    .service {
+        padding-bottom: 7rem ;
+    }
+
+    .portfolio {
+        padding-bottom: 7rem;
+    }
+    .contact {
+        min-height: auto;
+    }
+    .footer {
+        padding: 2rem 3%;
+    }
 }
 
-/*video*/
+/* ----toggle button eka nawatha show kireemta---*/
+@media (max-width: 768px) {
+#menu-icon {
+    display: block;
+}
+.navbar {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 3%;
+    background: var(--bg-color);
+    border-top: .1rem solid rgba(0,0,0,.2);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
+    display: none;
+}
+
+.navbar.active{
+    display: block;
+
+}
+
+.navbar a {
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0;
+}
+.home {
+    flex-direction: column;
+}
+.home-content h3 {
+    font-size: 2.6rem;
+}
+.home-content h1{
+font-size: 5rem;
+}
+.home-img img {
+    width: 20vw;
+    margin-top: 2rem;
+
+}
+.About {
+    flex-direction: column-reverse;
+}
+.About img {
+    width: 70vw;
+    margin-top: 4rem;
+}
+.service h2 {
+    margin-bottom: 3rem;
+
+}
+.portfolio h2 {
+    margin-bottom: 3rem;
+}
+.portfolio-container {
+grid-template-columns: repeat(2,1fr);
+}
+}
+
+@media (max-width: 768px){
+    .portfolio-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 450px) {
+    html {
+        font-size: 50%;
+    }
+    .contact form .input-box input {
+        width: 100%;
+    }
+}
+@media (max-width: 365px) {
+    .home-img img {
+        width: 90vw;
+    }
+    .About-img img {
+        width: 90%;
+    }
+
+    .footer {
+        flex-direction: column-reverse;
+    }
+    .footer p {
+        text-align: center;
+        margin-top: 2rem;
+    }
+}
